<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <Button
        android:id="@+id/btn_row_select"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/row_menu_row_select" />

    <Button
        android:id="@+id/btn_copy_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/row_menu_copy" />

    <Button
        android:id="@+id/btn_cut_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/row_menu_cut" />

    <Button
        android:id="@+id/btn_delete_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/row_menu_delete" />

    <Button
        android:id="@+id/btn_remove_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/row_menu_remove" />

    <Button
        android:id="@+id/btn_paste_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/row_menu_paste" />

    <Button
        android:id="@+id/btn_insert_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/row_menu_add_row" />

</LinearLayout>
