<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="4dp"
    android:gravity="center_vertical">

    <TextView
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:textStyle="bold"
        android:gravity="center"
        android:text="@string/header_row_number" />

    <TextView
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:textStyle="bold"
        android:gravity="center"
        android:text="@string/header_action" />

    <TextView
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:textStyle="bold"
        android:gravity="center"
        android:text="@string/header_time" />

    <TextView
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:textStyle="bold"
        android:gravity="center"
        android:text="@string/header_duration" />

    <TextView
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:textStyle="bold"
        android:gravity="center"
        android:text="@string/header_quan1" />

    <TextView
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:textStyle="bold"
        android:gravity="center"
        android:text="@string/header_comment" />

</LinearLayout>
