<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/dar_light"
    android:padding="16dp">

    <Button
        android:id="@+id/btn_period_daily"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/period_daily" />

    <Button
        android:id="@+id/btn_period_weekly"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/period_weekly" />

    <Button
        android:id="@+id/btn_period_monthly"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/period_monthly" />

    <Button
        android:id="@+id/btn_period_yearly"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/period_yearly" />

    <Button
        android:id="@+id/btn_period_alltime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/period_alltime" />

</LinearLayout>
